  approximation (Fomel, Ying, and Song)
* jsg/crs: Non-hyperbolic common reflection surface (Fomel and
  Kazinnik)
* trip/iwave: IWAVE demonstration package (Symes)
* Viking Graben data moved to the public data server

To SCons:

To documentation:

To APIs:
* python API (m8r or rsf.api) is now always installed
* tell and seek added to C++ API
* added support for FFTW and PSP

To the Python package:

To programs:

* sfsemblance: semblance over the specified axis
* sflinear: linear 1-D interpolation
* sfspike now optionally accepts stdin
* iwave package from Bill Symes and The Rice Inversion Project
* user/zone: new contributor (Yanadet Sripanich)
* sfsegyheader creates delrt from o1
* user/poulsonj: new contributor (Jack Poulson)
* vpconvert  checks the existence of different pens and prefers gdpen
  to pngpen
* sffft1, sffft3, sfspectra: optional support for FFTW

===Bug fixes===

In the reproducible documents collection:

In documentation:

In APIs:
* Fixed settype bug in Python API

In the Python package:

* Fixed "scons test" in suproj

In programs:

* Fixed size limitation in sfclip2
* Added x0 and y0 in sfstolt 
* Fixed installing the plplot driver with .driver_info extension

In the build system:
* Fixed failed dependency on gendoc.h when installing pens

===Changes in defaults===

==Release 1.3 (2012-04-22)==

===Additions and enhancements===

To the reproducible documents collection:

* jsg/reversible: A reversible transform for seismic data processing
  (Burnett and Ferguson) 
* sep/pyramid: The pyramid transform and its application to
  signal/noise separation (Sun and Ronen)
* jsg/ffd: Fourier finite-difference wave propagation (Song and Fomel)
* jsg/apefint: Seismic data interpolation beyond aliasing using
  regularized nonstationary autoregression (Liu and Fomel)
* jsg/timefreq: Time-frequency analysis of seismic data using local
  attributes (Liu, Fomel, and Chen)
* data/alaska: Open Data/Open Source: Seismic Unix scripts to process