@@ -27,7 +27,13 @@
 >>> spike12.size(1)
 3
 >>> spike12.shape()
-(10, 3)
+(3, 10)
+>>> spike21 = spike12.reshape([10,1,3])
+>>> spike21.shape()
+(10, 1, 3)
+>>> spike1 = spike12.reshape()
+>>> spike1.shape()
+(30,)
 '''
 
 import doctest
