@@ -18,15 +18,24 @@
 */
 #include <rsf.h>
 
+#ifdef SF_HAS_FFTW
+#include <fftw3.h>
+#endif
+
 #include "fft2.h"
 
 int main(int argc, char* argv[])
 {   
     bool inv, cmplx;
-    int nz,nx,nz2,nx2,nk,ix,n2,pad1;
+    int nz,nx,nz2,nx2,nk,ix,n2,pad1,nw;
     float *f;
     sf_complex *c; 
     sf_file space, freq;
+#ifdef SF_HAS_FFTW
+    int i1, i2;
+    fftwf_plan fft;
+#endif
+
 	
     sf_init(argc,argv);
     
@@ -34,63 +43,94 @@ int main(int argc, char* argv[])
     /* inverse flag */
 	
     if (inv) {
-		freq = sf_input("in");
-		space = sf_output("out");
+	freq = sf_input("in");
+	space = sf_output("out");
 		
-		if (SF_COMPLEX != sf_gettype(freq)) sf_error("Need complex input");
-		sf_settype(space,SF_FLOAT);
+	if (SF_COMPLEX != sf_gettype(freq)) sf_error("Need complex input");
+	sf_settype(space,SF_FLOAT);
 		
-		if (!sf_getint("n1",&nz)) sf_error("No n1= in input");
-		if (!sf_getint("n2",&nx)) sf_error("No n2= in input");
+	if (!sf_getint("n1",&nz)) sf_error("No n1= in input");
+	if (!sf_getint("n2",&nx)) sf_error("No n2= in input");
 		
-		sf_putint(space,"n1",nz);
-		sf_putint(space,"n2",nx);
+	sf_putint(space,"n1",nz);
+	sf_putint(space,"n2",nx);
     } else {
-		space = sf_input("in");
-		freq = sf_output("out");
+	space = sf_input("in");
+	freq = sf_output("out");
 		
-		if (SF_FLOAT != sf_gettype(space)) sf_error("Need float input");
-		sf_settype(freq,SF_COMPLEX);
+	if (SF_FLOAT != sf_gettype(space)) sf_error("Need float input");
+	sf_settype(freq,SF_COMPLEX);
 		
-		if (!sf_histint(space,"n1",&nz)) sf_error("No n1= in input");
-		if (!sf_histint(space,"n2",&nx)) sf_error("No n2= in input");
+	if (!sf_histint(space,"n1",&nz)) sf_error("No n1= in input");
+	if (!sf_histint(space,"n2",&nx)) sf_error("No n2= in input");
     }
 	
     if (!sf_getbool("cmplx",&cmplx)) cmplx=false; /* use complex FFT */
     if (!sf_getint("pad1",&pad1)) pad1=1; /* padding factor on the first axis */
 	
     nk = fft2_init(cmplx,pad1,nz,nx,&nz2,&nx2);
+    nw = nk/nx2;
 	
     if (inv) {
-		if (!sf_histint(freq,"n1",&n2) || n2 != nk) sf_error("Need n1=%d in input",nk);
+	if (!sf_histint(freq,"n1",&n2) || n2 != nk) sf_error("Need n1=%d in input",nk);
     } else {
-		sf_putint(freq,"n1",nk);
-		sf_putint(freq,"n2",1);
+	sf_putint(freq,"n1",nk);
+	sf_putint(freq,"n2",1);
     }
 	
     f = sf_floatalloc(nz2*nx2);
     c = sf_complexalloc(nk);
+
+#ifdef SF_HAS_FFTW
+    if (inv) {
+	fft = fftwf_plan_dft_c2r_2d(nx2,nz2,(fftwf_complex *) c,f,
+				    FFTW_MEASURE);
+    } else {
+	fft = fftwf_plan_dft_r2c_2d(nx2,nz2, f, (fftwf_complex *) c,
+				    FFTW_MEASURE);
+    }
+    if (NULL == fft) sf_error("FFTW failure.");
+#endif
 	
     if (inv) {
-		sf_complexread(c,nk,freq);
+	sf_complexread(c,nk,freq);
+
+#ifdef SF_HAS_FFTW
+	fftwf_execute(fft);
+#else
+	ifft2(f,c);
+#endif
 		
-		ifft2(f,c);
-		
-		for (ix=0; ix < nx; ix++) {
-			sf_floatwrite(f+ix*nz2,nz,space);
-		}
+	for (ix=0; ix < nx; ix++) {
+	    sf_floatwrite(f+ix*nz2,nz,space);
+	}
     } else {
-		for (ix=0; ix < nz2*nx2; ix++) {
-			f[ix]=0.;
-		}
+	for (ix=0; ix < nz2*nx2; ix++) {
+	    f[ix]=0.;
+	}
 		
-		for (ix=0; ix < nx; ix++) {
-			sf_floatread(f+ix*nz2,nz,space);
-		}
+	for (ix=0; ix < nx; ix++) {
+	    sf_floatread(f+ix*nz2,nz,space);
+	}
+	
+#ifdef SF_HAS_FFTW
+	fftwf_execute(fft);
+
+	/* FFT centering */
+	for (i2=1; i2<nx2; i2+=2) {
+	    for (i1=0; i1<nw; i1++) {
+#ifdef SF_HAS_COMPLEX_H
+		c[i2*nw+i1] = -c[i2*nw+i1];
+#else
+		c[i2*nw+i1] = sf_cneg(c[i2*nw+i1]);
+#endif
+	    }
+	}
+#else	
+	fft2(f,c);
+#endif
 		
-		fft2(f,c);
-		
-		sf_complexwrite(c,nk,freq);
+	sf_complexwrite(c,nk,freq);
     }
 	
     exit(0);
