@@ -22,6 +22,10 @@
 #include <omp.h>
 #endif
 
+#ifdef SF_HAS_FFTW
+#include <fftw3.h>
+#endif
+
 #include "fft2.h"
 
 int main(int argc, char* argv[])
@@ -33,6 +37,10 @@ int main(int argc, char* argv[])
     float *curr, *prev, **img, *dat, **lft, **rht, **wave;
     sf_complex *cwave, *cwavem;
     sf_file data, image, left, right;
+
+#ifdef SF_HAS_FFTW
+    fftwf_plan fft, *ifft;
+#endif
 
     sf_init(argc,argv);
 
@@ -156,6 +164,21 @@ int main(int argc, char* argv[])
 	its = +1;
     }
 
+#ifdef SF_HAS_FFTW
+    fft = fftwf_plan_dft_r2c_2d(nx2,nz2,
+				curr, (fftwf_complex *) cwave,
+				FFTW_MEASURE);
+    if (NULL == fft) sf_error("FFTW failure.");
+    ifft = (fftwf_plan *) sf_alloc(m2,sizeof(fftwf_plan));
+    for (im = 0; im < m2; im++) {
+	ifft[im] = fftwf_plan_dft_c2r_2d(nx2,nz2,
+					(fftwf_complex *) cwavem,
+					wave[im],
+					FFTW_MEASURE);
+	if (NULL == ifft[im]) sf_error("FFTW failure.");
+    }
+#endif
+
 
     /* time stepping */
     for (it=it1; it != it2; it += its) {
@@ -178,7 +201,11 @@ int main(int argc, char* argv[])
 	}
 
 	/* matrix multiplication */
+#ifdef SF_HAS_FFTW
+	fftwf_execute(fft);
+#else
 	fft2(curr,cwave);
+#endif
 
 	for (im = 0; im < m2; im++) {
 	    for (ik = 0; ik < nk; ik++) {
@@ -188,7 +215,11 @@ int main(int argc, char* argv[])
 		cwavem[ik] = sf_crmul(cwave[ik],rht[ik][im]);
 #endif
 	    }
+#ifdef SF_HAS_FFTW
+	    fftwf_execute(ifft[im]);
+#else
 	    ifft2(wave[im],cwavem);
+#endif
 	}
 
 
