@@ -18,6 +18,10 @@
 */
 #include <rsf.h>
 
+#ifdef SF_HAS_FFTW
+#include <fftw3.h>
+#endif
+
 #include "fft2.h"
 
 int main(int argc, char* argv[])
@@ -36,6 +40,10 @@ int main(int argc, char* argv[])
 
     float **lt, **rt;
     sf_file left, right;
+
+#ifdef SF_HAS_FFTW
+    fftwf_plan fft, *ifft;
+#endif
 
     sf_init(argc,argv);
     if(!sf_getbool("verb",&verb)) verb=false; /* verbosity */
@@ -97,13 +105,31 @@ int main(int argc, char* argv[])
 	curr[iz]=0.;
     }
 
+#ifdef SF_HAS_FFTW
+    fft = fftwf_plan_dft_r2c_2d(nx2,nz2,
+				curr, (fftwf_complex *) cwave,
+				FFTW_MEASURE);
+    if (NULL == fft) sf_error("FFTW failure.");
+    ifft = (fftwf_plan *) sf_alloc(m2,sizeof(fftwf_plan));
+    for (im = 0; im < m2; im++) {
+	ifft[im] = fftwf_plan_dft_c2r_2d(nx2,nz2,
+					(fftwf_complex *) cwavem,
+					wave[im],
+					FFTW_MEASURE);
+	if (NULL == ifft[im]) sf_error("FFTW failure.");
+    }
+#endif
 
     /* MAIN LOOP */
     for (it=0; it<nt; it++) {
 	if(verb) sf_warning("it=%d;",it);
 
 	/* matrix multiplication */
+#ifdef SF_HAS_FFTW
+	fftwf_execute(fft);
+#else
 	fft2(curr,cwave);
+#endif
 
 	for (im = 0; im < m2; im++) {
 	    for (ik = 0; ik < nk; ik++) {
@@ -113,7 +139,11 @@ int main(int argc, char* argv[])
 		cwavem[ik] = sf_crmul(cwave[ik],rt[ik][im]);
 #endif
 	    }
+#ifdef SF_HAS_FFTW
+	    fftwf_execute(ifft[im]);
+#else
 	    ifft2(wave[im],cwavem);
+#endif
 	}
 
 	for (ix = 0; ix < nx; ix++) {
